@@ -1,5 +1,11 @@
 2013-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* src/qt4/color_setting_dialog.cpp:
+	* src/qt4/debug_log_painter.cpp:
+	* src/qt4/draw_config.cpp:
+	* src/qt4/draw_config.h:
+	- 行動列の描画でパス行動の色を単独で設定できるように変更
+
 	* src/qt4/debug_log_painter.cpp:
 	- 行動列描画時に評価値の描画も追加
 
